--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -13,6 +13,7 @@ pipeline {
         BASELINE_SLEEP = 40
         CONTENDER_SLEEP = 40
         BUILD_COMMIT = "${GIT_COMMIT}"
+	EXTRA_ANSIBLE_PARAMS = ""
     }
     options {
         disableConcurrentBuilds()
@@ -82,10 +83,10 @@ pipeline {
 
                 dir('prm/owca/workloads'){
                     echo 'Start baseline workloads.'
-                    sh 'ansible-playbook -vvv -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    sh 'ansible-playbook ${EXTRA_ANSIBLE_PARAMS} -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep BASELINE_SLEEP
                     echo 'Start contender workload.'
-                    sh 'ansible-playbook -vvv -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep CONTENDER_SLEEP
                 }
                 dir('prm'){
@@ -96,7 +97,7 @@ pipeline {
             post {
                 always {
                     echo 'Stop all workloads...'
-                    sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
+                    sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
                     sleep 5
                     echo 'Plot LLC results...'
                     plot(
@@ -162,10 +163,10 @@ pipeline {
 
                 dir('prm/owca/workloads'){
                     echo 'Start baseline workloads.'
-                    sh 'ansible-playbook -vvv -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
+                    sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
                     sleep BASELINE_SLEEP
                     echo 'Start contender workload.'
-                    sh 'ansible-playbook -vvv -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
+                    sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=tensorflow_benchmark_prediction -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep CONTENDER_SLEEP
                 }
                 dir('prm'){
@@ -176,7 +177,7 @@ pipeline {
             post {
                 always {
                     echo 'Stop all workloads...'
-                    sh 'ansible-playbook -v -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
+                    sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
                     sleep 5
                     echo 'Plot LLC results...'
                     plot(
