--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -2,14 +2,13 @@ pipeline {
     triggers {
         cron('H/30 * * * *')
     }
-    agent { label 'mesos' }
+    agent { label 'kubernetes' }
     environment {
         PLAYBOOK='prm/owca/workloads/run_workloads.yaml'
-        INVENTORY='prm/demo_scenarios/common/inventory.yaml'
+        INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
         LLC_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
         MEMBW_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
         PROMETHEUS='http://100.64.176.12:9090' 
-        MESOS_MASTER_HOST='100.64.176.23'
         BASELINE_SLEEP = 40
         CONTENDER_SLEEP = 40
         BUILD_COMMIT = "${GIT_COMMIT}"
