--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -74,7 +74,7 @@ pipeline {
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/threshold.json /var/lib/owca/
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/owca/
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml /etc/owca/
-                sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/
+                sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/owca.pex
                 sudo systemctl restart owca
                 '''
                 echo 'Restart owca...'
@@ -154,7 +154,7 @@ pipeline {
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/threshold.json /var/lib/owca/
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/owca/
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml /etc/owca/
-                sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/
+                sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/owca.pex
                 sudo systemctl restart owca
                 '''
                 sleep 5
