--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -59,6 +59,7 @@ pipeline {
             }
             steps {
                 echo 'Reconfigure owca...'
+		sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
@@ -68,12 +69,12 @@ pipeline {
                                 fileContentReplaceItemConfig( search: 'BUILD_SCENARIO', replace: "${BUILD_SCENARIO}", matchCount: 0)
                             ],
                             fileEncoding: 'UTF-8', 
-                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml")
+                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp")
                         ])
                 sh'''
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/threshold.json /var/lib/owca/
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/owca/
-                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml /etc/owca/
+                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp /etc/owca/owca_config.yml
                 sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/owca.pex
                 sudo systemctl restart owca
                 '''
@@ -139,6 +140,7 @@ pipeline {
             steps {
 
                 echo 'Reconfigure owca...'
+		sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
@@ -148,12 +150,12 @@ pipeline {
                                 fileContentReplaceItemConfig( search: 'BUILD_SCENARIO', replace: "${BUILD_SCENARIO}", matchCount: 0)
                             ],
                             fileEncoding: 'UTF-8', 
-                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml")
+                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp")
                         ])
                 sh'''
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/threshold.json /var/lib/owca/
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/owca/
-                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml /etc/owca/
+                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp /etc/owca/owca_config.yml
                 sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/owca.pex
                 sudo systemctl restart owca
                 '''
