--- a/prm/demo_scenarios/common/owca_config.yml
+++ b/prm/demo_scenarios/common/owca_config.yml
@@ -12,6 +12,7 @@ runner: !DetectionRunner
     topic: "owca_anomalies"
     max_timeout_in_seconds: 5.
   detector: !ContentionDetector
+    action_delay: 10
     mode_config: detect
     
   extra_labels:
