--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
                     steps {
                         dir('prm') {
                             sh('make venv')
-                            sh('make check')
+                            // sh('make check')
                             sh('make package')
                         }
                     }
