--- a/prm/demo_scenarios/common/owca_config.yml
+++ b/prm/demo_scenarios/common/owca_config.yml
@@ -11,7 +11,7 @@ runner: !DetectionRunner
     brokers_ips: ['100.64.176.12:9092']
     topic: "owca_anomalies"
     max_timeout_in_seconds: 5.
-  detector: !ExampleDetector
+  detector: !ContentionDetector
     action_delay: 10
     mode_config: detect
     
