--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
         booleanParam(name: 'LLC', defaultValue: true, description: 'Run LLC experiment')
 		/* --- */
         booleanParam(name: 'BUILD_MBW_MODEL', defaultValue: false, description: 'Build Model For MBW Contention')
-        booleanParam(name: 'MBW', defaultValue: true, description: 'Run MBW experiment')
+        booleanParam(name: 'MBW', defaultValue: false, description: 'Run MBW experiment')
     }
     stages {
         stage('Build pex') {
@@ -135,7 +135,7 @@ pipeline {
                 sudo systemctl restart owca
                 '''
                 echo 'Restart owca...'
-                sleep 5
+                sleep 2
                 sh 'sudo systemctl status owca'
 
                 dir('prm/owca/workloads'){
