--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -10,9 +10,9 @@ pipeline {
         MEMBW_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
         PROMETHEUS='http://100.64.176.12:9090' 
         MESOS_MASTER_HOST='100.64.176.23'
-        LLC_BASELINE_SLEEP = 300
+        LLC_BASELINE_SLEEP = 150
         LLC_COLLECT_SLEEP = 36000
-        LLC_CONTENDER_SLEEP = 600
+        LLC_CONTENDER_SLEEP = 150
         MBW_BASELINE_SLEEP = 5
         MBW_CONTENDER_SLEEP = 5
         BUILD_COMMIT = "${GIT_COMMIT}"
@@ -139,6 +139,7 @@ pipeline {
                     sh 'ansible-playbook ${EXTRA_ANSIBLE_PARAMS} -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep LLC_BASELINE_SLEEP
                     sh 'sed -i \'s/number_of_rows=100000/number_of_rows=1000000/g\' ./cassandra_stress/cassandra_stress.aurora'
+                    sh 'sed -i \'s/threads=%d/threads=%d\ fixed=1000000/g\' ./cassandra_stress/cassandra_stress.aurora'
                     echo 'Start contender workload.'
                     sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=cassandra_stress--stress -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep LLC_CONTENDER_SLEEP
