--- a/prm/demo_scenarios/complex_llc.0/inventory.yaml
+++ b/prm/demo_scenarios/complex_llc.0/inventory.yaml
@@ -93,6 +93,7 @@ application_hosts:
           cassandra_stress:
             env:
               threads: 30
+              duration: 1200
               #qps: @TODO in cassandra_stress.aurora
             resources:
               cpu: 30
