--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -136,6 +136,8 @@ pipeline {
 
                 dir('prm/owca/workloads'){
                     sh 'sed -i s/number_of_rows=100000$/number_of_rows=10000/g ./cassandra_stress/cassandra_stress.aurora'
+                    sh 'sed -i s/40000/5000/g ./mutilate/mutilate.aurora'
+                    sh 'sed -i s/-C\\ %d\\;/\C\\ %d\\ -R\\ 5000\\;/g ./mutilate/mutilate.aurora'
                     echo 'Start baseline workloads.'
                     sh 'ansible-playbook ${EXTRA_ANSIBLE_PARAMS} -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep LLC_BASELINE_SLEEP
