--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
 //    }
     agent { label 'mesos' }
     environment {
-        PLAYBOOK='prm/owca/workloads/run_workloads.yaml'
+        PLAYBOOK='prm/workload-collocation-agent/workloads/run_workloads.yaml'
         INVENTORY='prm/demo_scenarios/common/inventory.yaml'
         LLC_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
         MEMBW_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
@@ -23,7 +23,7 @@ pipeline {
         timeout(time: 1200, unit: 'MINUTES')
     }
     parameters {
-        booleanParam(name: 'BUILD_PEX', defaultValue: true, description: 'Build owca-pex')
+        booleanParam(name: 'BUILD_PEX', defaultValue: true, description: 'Build wca-pex')
         booleanParam(name: 'LLC', defaultValue: true, description: 'Run LLC experiment')
         booleanParam(name: 'BUILD_LLC_MODEL', defaultValue: false, description: 'Build Model For LLC Contention')
         booleanParam(name: 'MB', defaultValue: false, description: 'Run MBW experiment')
@@ -61,8 +61,8 @@ pipeline {
                 LABELS="{additional_labels: {build_number: \"${BUILD_NUMBER}\", build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", build_scenario: \"$BUILD_SCENARIO\"}}"
             }
             steps {
-                echo 'Reconfigure owca...'
-                sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.collect.yml ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp'
+                echo 'Reconfigure wca...'
+                sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.collect.yml ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
@@ -72,19 +72,19 @@ pipeline {
                                 fileContentReplaceItemConfig( search: 'BUILD_SCENARIO', replace: "${BUILD_SCENARIO}", matchCount: 0)
                             ],
                             fileEncoding: 'UTF-8', 
-                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp")
+                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp")
                         ])
                 sh'''
-                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/owca/
-                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp /etc/owca/owca_config.yml
-                sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/owca.pex
-                sudo systemctl restart owca
+                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/wca/
+                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp /etc/wca/wca_config.yml
+                sudo cp ${WORKSPACE}/prm/dist/wca-prm.pex /usr/bin/wca.pex
+                sudo systemctl restart wca
                 '''
-                echo 'Restart owca...'
+                echo 'Restart wca...'
                 sleep 5
-                sh 'sudo systemctl status owca'
+                sh 'sudo systemctl status wca'
 
-                dir('prm/owca/workloads'){
+                dir('prm/wca/workloads'){
                     echo 'Start baseline workloads.'
                     sh 'ansible-playbook ${EXTRA_ANSIBLE_PARAMS} -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep LLC_COLLECT_SLEEP
@@ -94,8 +94,8 @@ pipeline {
                 always {
                     echo 'Stop all workloads...'
                     sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${INVENTORY} --tags=clean_jobs ${WORKSPACE}/${PLAYBOOK}'
-                    echo 'Stop owca...'
-                    sh 'sudo systemctl stop owca'
+                    echo 'Stop wca...'
+                    sh 'sudo systemctl stop wca'
                 }
             }
         }
@@ -111,8 +111,8 @@ pipeline {
                 LABELS="{additional_labels: {build_number: \"${BUILD_NUMBER}\", build_node_name: \"${NODE_NAME}\", build_commit: \"${GIT_COMMIT}\", build_scenario: \"$BUILD_SCENARIO\"}}"
             }
             steps {
-                echo 'Reconfigure owca...'
-                sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp'
+                echo 'Reconfigure wca...'
+                sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
@@ -122,19 +122,19 @@ pipeline {
                                 fileContentReplaceItemConfig( search: 'BUILD_SCENARIO', replace: "${BUILD_SCENARIO}", matchCount: 0)
                             ],
                             fileEncoding: 'UTF-8', 
-                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp")
+                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp")
                         ])
                 sh'''
-                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/owca/
-                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp /etc/owca/owca_config.yml
-                sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/owca.pex
-                sudo systemctl restart owca
+                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/wca/
+                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp /etc/wca/wca_config.yml
+                sudo cp ${WORKSPACE}/prm/dist/wca-prm.pex /usr/bin/wca.pex
+                sudo systemctl restart wca
                 '''
-                echo 'Restart owca...'
+                echo 'Restart wca...'
                 sleep 5
-                sh 'sudo systemctl status owca'
+                sh 'sudo systemctl status wca'
 
-                dir('prm/owca/workloads'){
+                dir('prm/wca/workloads'){
                     sh 'sed -i s/number_of_rows=100000$/number_of_rows=10000/g ./cassandra_stress/cassandra_stress.aurora'
                     sh 'sed -i s/40000/2000/g ./mutilate/mutilate.aurora'
                     sh 'sed -i s/-C\\ %d\\;/-C\\ %d\\ -R\\ 2000\\;/g ./mutilate/mutilate.aurora'
@@ -174,8 +174,8 @@ pipeline {
                     )
                     echo 'Storing LLC results.'
                     junit 'prm/unit_results.xml'
-                    echo 'Stop owca...'
-                    sh 'sudo systemctl stop owca'
+                    echo 'Stop wca...'
+                    sh 'sudo systemctl stop wca'
                 }
             }
         }
@@ -194,8 +194,8 @@ pipeline {
 
             steps {
 
-                echo 'Reconfigure owca...'
-		sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp'
+                echo 'Reconfigure wca...'
+		sh 'cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp'
                 contentReplace(
                     configs: [
                         fileContentReplaceConfig(
@@ -205,20 +205,20 @@ pipeline {
                                 fileContentReplaceItemConfig( search: 'BUILD_SCENARIO', replace: "${BUILD_SCENARIO}", matchCount: 0)
                             ],
                             fileEncoding: 'UTF-8', 
-                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp")
+                            filePath: "${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp")
                         ])
                 sh'''
-                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/threshold.json /var/lib/owca/
-                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/owca/
-                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/owca_config.yml.tmp /etc/owca/owca_config.yml
-                sudo cp ${WORKSPACE}/prm/dist/owca-prm.pex /usr/bin/owca.pex
-                sudo systemctl restart owca
+                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/threshold.json /var/lib/wca/
+                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/wca/
+                sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp /etc/wca/wca_config.yml
+                sudo cp ${WORKSPACE}/prm/dist/wca-prm.pex /usr/bin/wca.pex
+                sudo systemctl restart wca
                 '''
                 sleep 5
-                echo 'Restart owca...'
-                sh 'sudo systemctl status owca'
+                echo 'Restart wca...'
+                sh 'sudo systemctl status wca'
 
-                dir('prm/owca/workloads'){
+                dir('prm/wca/workloads'){
                     echo 'Start baseline workloads.'
                     sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
                     sleep MBW_BASELINE_SLEEP
@@ -255,8 +255,8 @@ pipeline {
                     )
                     echo 'Storing MBW results.'
                     junit 'prm/unit_results.xml'
-                    echo 'Stop owca...'
-                    sh 'sudo systemctl stop owca'
+                    echo 'Stop wca...'
+                    sh 'sudo systemctl stop wca'
                 }
             }
         }
