--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -75,7 +75,7 @@ pipeline {
                             filePath: "${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp")
                         ])
                 sh'''
-                mkdir /var/lib/wca
+                sudo mkdir /var/lib/wca
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/wca/
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp /etc/wca/wca_config.yml
                 sudo cp ${WORKSPACE}/prm/dist/wca-prm.pex /usr/bin/wca.pex
