--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -76,6 +76,7 @@ pipeline {
                         ])
                 sh'''
                 sudo mkdir -p /var/lib/wca
+                sudo mkdir -p /etc/wca
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/wca/
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp /etc/wca/wca_config.yml
                 sudo cp ${WORKSPACE}/prm/dist/wca-prm.pex /usr/bin/wca.pex
@@ -127,6 +128,7 @@ pipeline {
                         ])
                 sh'''
                 sudo mkdir -p /var/lib/wca/
+                sudo mkdir -p /etc/wca
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/wca/
                 sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp /etc/wca/wca_config.yml
                 sudo cp ${WORKSPACE}/prm/dist/wca-prm.pex /usr/bin/wca.pex
