--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -86,7 +86,7 @@ pipeline {
                 sleep 5
                 sh 'sudo systemctl status wca'
 
-                dir('prm/wca/workloads'){
+                dir('prm/workload-collocation-agent/workloads'){
                     echo 'Start baseline workloads.'
                     sh 'ansible-playbook ${EXTRA_ANSIBLE_PARAMS} -i ${WORKSPACE}/${LLC_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}'
                     sleep LLC_COLLECT_SLEEP
@@ -138,7 +138,7 @@ pipeline {
                 sleep 5
                 sh 'sudo systemctl status wca'
 
-                dir('prm/wca/workloads'){
+                dir('prm/workload-collocation-agent/workloads'){
                     sh 'sed -i s/number_of_rows=100000$/number_of_rows=10000/g ./cassandra_stress/cassandra_stress.aurora'
                     sh 'sed -i s/40000/2000/g ./mutilate/mutilate.aurora'
                     sh 'sed -i s/-C\\ %d\\;/-C\\ %d\\ -R\\ 2000\\;/g ./mutilate/mutilate.aurora'
@@ -222,7 +222,7 @@ pipeline {
                 echo 'Restart wca...'
                 sh 'sudo systemctl status wca'
 
-                dir('prm/wca/workloads'){
+                dir('prm/workload-collocation-agent/workloads'){
                     echo 'Start baseline workloads.'
                     sh 'ansible-playbook  ${EXTRA_ANSIBLE_PARAMS}  -i ${WORKSPACE}/${MEMBW_INVENTORY} -i ${WORKSPACE}/${INVENTORY} --tags=specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress -e "${LABELS}" ${WORKSPACE}/${PLAYBOOK}' 
                     sleep MBW_BASELINE_SLEEP
