--- a/prm/demo_scenarios/complex_mbw.0/inventory.yaml
+++ b/prm/demo_scenarios/complex_mbw.0/inventory.yaml
@@ -79,3 +79,14 @@ application_hosts:
               threads: 8
               #qps: @TODO in cassandra_stress.aurora
             resources: {'cpu': 8, 'ram': 20, 'disk': 50}
+
+      stress_ng:
+        default:
+          count: 6
+          timeout: 30
+          stressor: stream
+          number_workers: 2
+          resources:
+            cpu: 1
+            ram: 1
+            disk: 1
